Add rabbitmq submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deploy/cookbooks/openssl"]
 	path = deploy/cookbooks/openssl
 	url = git://github.com/opscode-cookbooks/openssl.git
+[submodule "deploy/cookbooks/rabbitmq"]
+	path = deploy/cookbooks/rabbitmq
+	url = git://github.com/opscode-cookbooks/rabbitmq.git
