--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "deploy/cookbooks/rabbitmq"]
 	path = deploy/cookbooks/rabbitmq
 	url = git://github.com/opscode-cookbooks/rabbitmq.git
+[submodule "deploy/cookbooks/postgresql"]
+	path = deploy/cookbooks/postgresql
+	url = git://github.com/coroutine/chef-postgresql.git
+[submodule "deploy/cookbooks/apt"]
+	path = deploy/cookbooks/apt
+	url = git://github.com/opscode-cookbooks/apt.git
